created create project button

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,5 +1,12 @@
-<div>Welcome to my page</div>
+<div>Rendering Home</div>
 
-<%= erb :"user/_header" %>
 
-<div></div>
+
+<div>
+  <h2>Imagine something beautiful</h2>
+</div>
+
+
+<div>
+  <%= erb :"project/_create_project_button" %>
+</div>
