projects can be created and saved to the database, added a project show and project index.

--- a/app/views/project/_create_project_button.erb
+++ b/app/views/project/_create_project_button.erb
@@ -1,7 +1,9 @@
-<div class='create_project_button'>
-  <p>this is a change</p>
-  <form method='get' action='/projects/new'>
-    <input type='submit' value='create a new project'>
-  </form>
-</div>
+<% if current_user %>
+  <div class='create_project_button'>
+    <p></p>
+    <form method='get' action='/projects/new'>
+      <input type='submit' value='create a new project'>
+    </form>
+  </div>
+<% end %>
 
