added <button> to create project button

--- a/app/views/project/_create_project_button.erb
+++ b/app/views/project/_create_project_button.erb
@@ -2,7 +2,7 @@
   <div class='create_project_button'>
     <p></p>
     <form method='get' action='/projects/new'>
-      <input type='submit' value='create a new project'>
+      <button><input type='submit' value='create a new project'></button>
     </form>
   </div>
 <% end %>
