jquery works with form display button, form saves via ajax to database successfully without refreshing form. The form does not yet close nor is the project appended to the index when form is submitted (only after page is refreshed)

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,16 +1,19 @@
-<div>Rendering Home</div>
 
 
 
-<div>
-  <h2>Imagine something beautiful</h2>
-</div>
+  <div>
+    <h2>Imagine something beautiful</h2>
+  </div>
 
+  <div>
+    <%= erb :"project/_create_project_button" %>
+  </div>
 
-<div>
-  <%= erb :"project/_create_project_button" %>
-</div>
+  <div class="hidden_project_form">
+    <%= erb :"project/_project_new" %>
+  </div>
 
-<div>
-  <%= erb :"project/_project_index" %>
-</div>
+  <div class="project_index">
+    <%= erb :"project/_project_index" %>
+  </div>
+
