--- a/app/views/project/_create_project_button.erb
+++ b/app/views/project/_create_project_button.erb
@@ -1,9 +1,9 @@
 <% if current_user %>
-  <div class='create_project_button'>
+  <div>
     <p></p>
-    <form method='get' action='/projects/new'>
-      <input type='submit' value='create a new project'>
-    </form>
+      <button class='create_project_button'>
+        Create New Project
+      </button>
   </div>
 <% end %>
 
