tried listing each project listing on index as partial with locals passed in, did not work. Returned work back to original. _project_listing.erb is still there

--- a/app/views/project/_project_index.erb
+++ b/app/views/project/_project_index.erb
@@ -1,16 +1,11 @@
 <div class='project_index'>
   <% if @projects %>
-    <% @projects.each do |proje| %>
+    <% @projects.each do |project| %>
       <div>
-        <%= erb _listing, layout: false, locals: {project: proje} %>
-
-        <!-- <a href="projects/<%= project.id %>" ><%= project.name %></a> -->
+        <a href="projects/<%= project.id %>" ><%= project.name %></a>
       </div>
     <% end %>
   <% end %>
 </div>
 
 
-
-erb _listing
-        <a href="projects/<%= project.id %>" ><%= project.name %></a>
