created collaborator button and form, switched around button/form placement.  Need to decide how to handle skills, I think the user is going to search for projects by inputing a string of key words which will be checked against project needs.

--- a/app/views/user/_collaborate_button.erb
+++ b/app/views/user/_collaborate_button.erb
@@ -1,8 +1,8 @@
 <% if current_user %>
   <div>
     <p></p>
-      <button class='create_project_button show'>
-        Create New Project
+      <button class='collaborate_button show'>
+        Collaborate
       </button>
   </div>
 <% end %>
