--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,17 +1,26 @@
 
 
 
-  <div>
-    <h2>Imagine something beautiful</h2>
+  <div id='<%= current_user.id %>'>
+    <h3>Imagine something beautiful</h3>
+    <h2 id='current_user'> Hello <%= current_user.name.capitalize %></h2>
   </div>
 
-  <div>
-    <%= erb :"project/_create_project_button" %>
+  <div class="float-tastic">
+    <div class='float-left'>
+      <%= erb :"user/_collaborate_button" %>
+      <div class="hidden_skill_form float-right hidden">
+        <%= erb :"user/_user_skill_edit" %>
+      </div>
+    </div>
+    <div class='float-right'>
+      <%= erb :"project/_create_project_button" %>
+      <div class="hidden_project_form float-left hidden">
+        <%= erb :"project/_project_new" %>
+      </div>
+    </div>
   </div>
 
-  <div class="hidden_project_form">
-    <%= erb :"project/_project_new" %>
-  </div>
 
   <div class="project_index">
     <%= erb :"project/_project_index" %>
