--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,6 +1,6 @@
 
 
-
+<% if current_user %>
   <div id='<%= current_user.id %>'>
     <h3>Imagine something beautiful</h3>
     <h2 id='current_user'> Hello <%= current_user.name.capitalize %></h2>
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-
+<% end %>
 
   <div class="project_index">
     <%= erb :"project/_project_index" %>
