Collaborator is able to save ProjectUser objects to the database. Need to create ProjectUser index for specific projects and then add a way to remove users from the project

--- a/app/views/project/_project_show.erb
+++ b/app/views/project/_project_show.erb
@@ -1,9 +1,13 @@
-<div>
-  <%= erb :'project/_project_collaborate_button', layout: false, locals: {project: @project} %>
+<div dataProjectId='<%= @project.id %>' class='project_show'>
+  <%= erb :'project_users/_project_collaborate_button', layout: false, locals: {project: @project} %>
 
   <p> Creator: <%= @creator.name %></p>
   <p> Timeframe: <%= @project.timeframe %></p>
   <p> Finances: <%= @project.finances %></p>
   <p> Description: <%= @project.description %></p>
   <p> Creative needs: <%= @project.needs %></p>
+
+  <div class='project_collaborators'>
+    <h3>Current collaborators:</h3>
+  </div>
 </div>
