completed link loop through project pages and collaborators and back to projects. Need to ajax the collaborators index on project page. Also need; creator deletes collaborators off of projects, collaborators can delete projects off the collaborations index. Future features, skill needs and skill search

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -23,6 +23,6 @@
 <% end %>
 
   <div class="project_index">
-    <%= erb :"project/_project_index" %>
+    <%= erb :"project/project_index" %>
   </div>
 
