--- a/app/views/project/project_index.erb
+++ b/app/views/project/project_index.erb
@@ -1,4 +1,4 @@
-<div class='project_index'>
+<div class='project_index index'>
   <h1>Existing Projects</h1>
   <% if @projects %>
     <% @projects.each do |project| %>
