Fixed user profile page link in header.

--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -11,7 +11,7 @@
 <% else %>
   <div class="float-tastic">
     <div class="float-left">
-      <a href="/users/:<%=current_user.id%>">
+      <a href="/users/<%=current_user.id%>">
         <p>user personal page</p>
       </a>
     </div>
