--- a/app/views/project_users/_collaborate_button.erb
+++ b/app/views/project_users/_collaborate_button.erb
@@ -2,7 +2,7 @@
   <div>
     <p></p>
       <button class='collaborate_button show'>
-        Collaborate
+        Search to Collaborate
       </button>
   </div>
 <% end %>
