--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -1,24 +1,26 @@
-<a href="/">Home</a>
-<% if !current_user %>
-  <div class="float-tastic">
-    <div class="float-left">
-      <%= erb :"user/_login" %>
+<div class="pos-f">
+  <a href="/">Home</a>
+  <% if !current_user %>
+    <div class="float-tastic">
+      <div class="float-left">
+        <%= erb :"user/_login" %>
+      </div>
+      <div class="float-right">
+        <%= erb :"user/_signup" %>
+      </div>
     </div>
-    <div class="float-right">
-      <%= erb :"user/_signup" %>
+  <% else %>
+    <div class="float-tastic">
+      <div class="float-left">
+        <a href="/users/<%=current_user.id%>">
+          <p>user personal page</p>
+        </a>
+      </div>
+      <div class="float-right">
+        <a href="/signout">
+          <p>signout</p>
+        </a>
+      </div>
     </div>
-  </div>
-<% else %>
-  <div class="float-tastic">
-    <div class="float-left">
-      <a href="/users/<%=current_user.id%>">
-        <p>user personal page</p>
-      </a>
-    </div>
-    <div class="float-right">
-      <a href="/signout">
-        <p>signout</p>
-      </a>
-    </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
